fix extra horizontal scrolling issue; revert bug caused by not including key in object.entries

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 * {
   padding: 0;
   margin: 0;
+  max-width: 100vw;
+  overflow: auto;
 }
 
 body {
